tried to fix non-hidden canvas on firefox

--- a/app/assets/stylesheets/tech_eval_demo.css.scss
+++ b/app/assets/stylesheets/tech_eval_demo.css.scss
@@ -10,3 +10,7 @@ div#status {
     font-size:30px;
     display:none;
 }
+
+#canvas {
+	background-color: white;
+}
